--- a/samples/src/main/resources/KartaTestCatalogFragment.yaml
+++ b/samples/src/main/resources/KartaTestCatalogFragment.yaml
@@ -19,7 +19,10 @@ tests:
     tags:
       - cycle
     featureFileName: featureFiles/TestSet1/SampleFeatureFile.yaml
-    numberOfIterations: 3
+    numberOfIterations: 0
+    runDuration: PT15S
+    coolDownBetweenIterations: PT1S
+    runAllScenarioParallely: true
     threadGroup: calculator
 
   - name: SampleFeatureFile2
@@ -29,6 +32,7 @@ tests:
     featureFileName: featureFiles/TestSet1/SampleFeatureFile2.yaml
     chanceBasedScenarioExecution: true
     exclusiveScenarioPerIteration: true
+    runAllScenarioParallely: true
     numberOfIterations: 10
     numberOfThreads: 5
     threadGroup: calculator
