Added @Initializer functionality to init classes after loading properties and beans. Methods marked with @Initializer will be called when KartaRuntime.initialize() is called for object or class(static only). Plugin.initialize() removed and replaced with @Initializer methods in OOB plugins Sample test added to demostrate exception handling of Kriya and Karta

--- a/samples/src/main/resources/KartaTestCatalogFragment.yaml
+++ b/samples/src/main/resources/KartaTestCatalogFragment.yaml
@@ -88,4 +88,14 @@ tests:
     numberOfIterations: 1
     sourceArchive: samples.jar
 
+  # - name: UIAutomationWithError
+  #   priority: 1
+  #   description: UI Automation test with error
+  #   tags:
+  #     - UI
+  #     - negative
+  #   featureFileName: featureFiles/UITests/UIAutomationWithError.yaml
+  #   numberOfIterations: 1
+  #   sourceArchive: samples.jar
+
 subCategories: []
