--- a/samples/src/main/resources/featureFiles/TestSet1/SampleFeatureFile.yaml
+++ b/samples/src/main/resources/featureFiles/TestSet1/SampleFeatureFile.yaml
@@ -37,14 +37,19 @@ testScenarios:
       - step: And the calculator should display "5"
       # - step: Then the missing step definition "xyz" should display accept another parameter "abc"
 
-  - name: Scenario4
+  - name: VariableTestDataExample
     executionSteps:
       - step: When a binary operation is perfomed on the calculator
         testData:
-          operand1: 1000
-          operation: "/"
-          operand2: 200
-      - step: And the calculator should display "5"
+          operand1: 0
+          operation: "*"
+        variableTestDataRuleMap:
+          operand2:
+            ruleType: INTEGER_RANGE
+            range:
+              min: 1
+              max: 100000
+      - step: And the calculator should display "0"
 
 scenarioTearDownSteps:
   - step: Then dummy teardown step
