--- a/samples/src/main/resources/KartaConfigurationOverrides.yaml
+++ b/samples/src/main/resources/KartaConfigurationOverrides.yaml
@@ -1,3 +1,20 @@
+pluginConfigurations:
+  - pluginName: KriyaExt
+    className: org.mvss.karta.samples.plugins.KriyaExtPlugin
+    jarFile: samples.jar
+
+  - pluginName: RandomTestDataSource
+    className: org.mvss.karta.samples.plugins.RandomTestDataSource
+    jarFile: samples.jar
+
+  - pluginName: CSVTestDataSourcePlugin
+    className: org.mvss.karta.samples.plugins.CSVTestDataSourcePlugin
+    jarFile: samples.jar
+
+  - pluginName: Gherkin
+    className: org.mvss.karta.samples.plugins.GherkinPlugin
+    jarFile: samples.jar
+
 enabledPlugins:
   - ObjectGenTestDataSource
   - RandomTestDataSource
