--- a/runtime/src/main/resources/samples/KartaConfigurationOverrides.yaml
+++ b/runtime/src/main/resources/samples/KartaConfigurationOverrides.yaml
@@ -1,4 +1,22 @@
+pluginConfigurations:
+  - pluginName: KriyaExt
+    className: org.mvss.karta.samples.plugins.KriyaExtPlugin
+    jarFile: samples.jar
+
+  - pluginName: RandomTestDataSource
+    className: org.mvss.karta.samples.plugins.RandomTestDataSource
+    jarFile: samples.jar
+
+  - pluginName: CSVTestDataSourcePlugin
+    className: org.mvss.karta.samples.plugins.CSVTestDataSourcePlugin
+    jarFile: samples.jar
+
+  - pluginName: Gherkin
+    className: org.mvss.karta.samples.plugins.GherkinPlugin
+    jarFile: samples.jar
+
 enabledPlugins:
+  - HTMLReportTestEventListener
   - ObjectGenTestDataSource
   - RandomTestDataSource
   - DumpToFileTestEventListener
