--- a/samples/src/main/resources/KartaTestCatalogFragment.yaml
+++ b/samples/src/main/resources/KartaTestCatalogFragment.yaml
@@ -88,6 +88,14 @@ tests:
     numberOfIterations: 1
     sourceArchive: samples.jar
 
+  - name: FailureSimulationFeature
+    description: sample feature file
+    tags:
+      - cycle
+    featureFileName: featureFiles/TestSet1/FailureSimulationFeature.yaml
+    numberOfIterations: 10000
+    numberOfThreads: 50
+
   # - name: UIAutomationWithError
   #   priority: 1
   #   description: UI Automation test with error
