Changing detailed result to optional to avoid memory starvation for long running cycle tests.

--- a/runtime/src/main/resources/bin/KartaConfiguration.yaml
+++ b/runtime/src/main/resources/bin/KartaConfiguration.yaml
@@ -71,6 +71,7 @@ properties:
   Karta:
     EventProcessor.numberOfThread: 1
     EventProcessor.maxEventQueueSize: 100
+    detailedResults: false
     node.config:
       host: localhost
       port: "17171"
