Conditional execution of steps/step groups based a condition identifier string in steps. Kriya now handles condition definition wiht @ConditionDefinition (similar to @StepDef) with only boolean return type. Renamed KartaConfiguration.defaultFeatureSourceParserPlugin to KartaConfiguration.defaultFeatureSourceParser and similar renaming for other default plugins names and plugin name keys for test categories and tests in test catalog. Merged properites Kriya.chaosActionDefinitionPackageNames into Kriya.stepDefinitionPackageNames. Removed unused classses.

--- a/framework/src/main/resources/KartaConfiguration.yaml
+++ b/framework/src/main/resources/KartaConfiguration.yaml
@@ -26,9 +26,9 @@ enabledPlugins:
   - ObjectGenTestDataSource
   - LoggingTestEventListener
 
-defaultFeatureSourceParserPlugin: Kriya
-defaultStepRunnerPlugin: Kriya
-defaultTestDataSourcePlugins:
+defaultFeatureSourceParser: Kriya
+defaultStepRunner: Kriya
+defaultTestDataSources:
   - DataFilesTestDataSource
 
 propertyFiles:
