--- a/sample_selenium_project/src/main/resources/KartaTestCatalogFragment.yaml
+++ b/sample_selenium_project/src/main/resources/KartaTestCatalogFragment.yaml
@@ -5,9 +5,9 @@ description: sample tests category
 tags:
   - sample
 
-featureSourceParserPlugin: Kriya
-stepRunnerPlugin: Kriya
-testDataSourcePlugins:
+featureSourceParser: Kriya
+stepRunner: Kriya
+testDataSources:
   - DataFilesTestDataSource
   - ObjectGenTestDataSource
 
