--- a/samples/src/main/resources/KartaTestCatalogFragment.yaml
+++ b/samples/src/main/resources/KartaTestCatalogFragment.yaml
@@ -5,9 +5,9 @@ description: sample tests category
 tags:
   - sample
 
-featureSourceParserPlugin: Kriya
-stepRunnerPlugin: Kriya
-testDataSourcePlugins:
+featureSourceParser: Kriya
+stepRunner: Kriya
+testDataSources:
   - DataFilesTestDataSource
   - ObjectGenTestDataSource
   - RandomTestDataSource
@@ -59,7 +59,7 @@ tests:
   - name: SampleGherkinFile5
     priority: 2
     description: sample Gherkin feature file4
-    featureSourceParserPlugin: Gherkin
+    featureSourceParser: Gherkin
     tags:
       - Gherkin
     featureFileName: featureFiles/GherkinTestSet/SampleFeatureFile5.feature
