--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 #Server properties
 server.port=18080
 
+# This property is needed for thymeleaf template resolver to locate and load the template.
+#Do Not Remove this property.
+spring.thymeleaf.prefix=classpath:/templates/
+
+spring.jpa.open-in-view=false
+spring.mvc.favicon.enabled=false
+
 #JPA properties
 spring.jpa.hibernate.ddl-auto=update
 
@@ -26,3 +33,7 @@ spring.datasource.validationQuery=SELECT 1
 #spring.datasource.hikari.maximum-pool-size=10
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.date-time=iso
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
