Updates to Rest Client and Rest Assured based rest client.

--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -107,12 +107,16 @@
 			<artifactId>quartz</artifactId>
 		</dependency>
 
-
-
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
 		</dependency>
 	</dependencies>
 
