--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -1,121 +1,153 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.mvss.karta</groupId>
-	<artifactId>runtime</artifactId>
-	<description>Karta runtime</description>
-	<packaging>pom</packaging>
+    <groupId>org.mvss.karta</groupId>
+    <artifactId>runtime</artifactId>
+    <description>Karta runtime</description>
+    <packaging>pom</packaging>
 
-	<properties>
-		<assembly.descriptor.location>src/main/assembly</assembly.descriptor.location>
-		<dependency.unpack.root.location>${project.build.directory}/packages/Karta</dependency.unpack.root.location>
-	</properties>
+    <properties>
+        <assembly.descriptor.location>src/main/assembly</assembly.descriptor.location>
+        <dependency.unpack.root.location>${project.build.directory}/packages/Karta</dependency.unpack.root.location>
+    </properties>
 
-	<parent>
-		<groupId>org.mvss</groupId>
-		<artifactId>karta</artifactId>
-		<version>0.1.0</version>
-	</parent>
+    <parent>
+        <groupId>org.mvss</groupId>
+        <artifactId>karta</artifactId>
+        <version>0.1.0</version>
+    </parent>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.mvss.karta</groupId>
-			<artifactId>framework</artifactId>
-			<version>0.1.0</version>
-			<scope>runtime</scope>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.mvss.karta</groupId>
+            <artifactId>framework</artifactId>
+            <version>0.1.0</version>
+            <scope>runtime</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>org.mvss.karta</groupId>
-			<artifactId>server</artifactId>
-			<version>0.1.0</version>
-			<scope>runtime</scope>
-		</dependency>
+        <dependency>
+            <groupId>org.mvss.karta</groupId>
+            <artifactId>server</artifactId>
+            <version>0.1.0</version>
+            <scope>runtime</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>org.mvss.karta</groupId>
-			<artifactId>samples</artifactId>
-			<version>0.1.0</version>
-			<scope>runtime</scope>
-		</dependency>
-		
-	</dependencies>
+        <dependency>
+            <groupId>org.mvss.karta</groupId>
+            <artifactId>samples</artifactId>
+            <version>0.1.0</version>
+            <scope>runtime</scope>
+        </dependency>
+
+    </dependencies>
 
 
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>bundle-package-karta</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<appendAssemblyId>false</appendAssemblyId>
-							<descriptors>
-								<descriptor>src/main/assembly/Karta.xml</descriptor>
-							</descriptors>
-							<finalName>Karta</finalName>
-							<outputDirectory>${project.build.directory}/packages</outputDirectory>
-						</configuration>
-					</execution>
-					<execution>
-						<id>zip-Karta</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-						<configuration>
-							<appendAssemblyId>false</appendAssemblyId>
-							<descriptors>
-								<descriptor>src/main/assembly/KartaZIP.xml</descriptor>
-							</descriptors>
-							<finalName>Karta</finalName>
-							<outputDirectory>${project.build.directory}/</outputDirectory>
-						</configuration>
-					</execution>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.googlecode.maven-download-plugin</groupId>
+                <artifactId>download-maven-plugin</artifactId>
+                <version>1.6.7</version>
+                <executions>
+                    <execution>
+                        <id>install-chromeDriverLinux</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <configuration>
+                            <url>http://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_linux64.zip</url>
+                            <unpack>true</unpack>
+                            <outputDirectory>${project.build.directory}/packages/Karta</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>install-chromeDriverWindows</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <configuration>
+                            <url>https://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_win32.zip</url>
+                            <unpack>true</unpack>
+                            <outputDirectory>${project.build.directory}/packages/Karta</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
 
-				</executions>
-			</plugin>
-		</plugins>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-assembly-plugin
-										</artifactId>
-										<versionRange>
-											[3.1.0,)
-										</versionRange>
-										<goals>
-											<goal>single</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>bundle-package-karta</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <descriptors>
+                                <descriptor>src/main/assembly/Karta.xml</descriptor>
+                            </descriptors>
+                            <finalName>Karta</finalName>
+                            <outputDirectory>${project.build.directory}/packages</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>zip-Karta</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <descriptors>
+                                <descriptor>src/main/assembly/KartaZIP.xml</descriptor>
+                            </descriptors>
+                            <finalName>Karta</finalName>
+                            <outputDirectory>${project.build.directory}/</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>
+                                            org.apache.maven.plugins
+                                        </groupId>
+                                        <artifactId>
+                                            maven-assembly-plugin
+                                        </artifactId>
+                                        <versionRange>
+                                            [3.1.0,)
+                                        </versionRange>
+                                        <goals>
+                                            <goal>single</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
