Enhancement for Chaos Test Framework: Kriya should not mandate parameters for ChaosActionDefinition but map TestExecutionContext and PreparedChaosAction if present as parameter argument types.

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -37,3 +37,5 @@ spring.mvc.format.date-time=iso
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
