Reducing runtime size and docker file for Karta Runtime

--- a/runtime/src/main/resources/samples/application.properties
+++ b/runtime/src/main/resources/samples/application.properties
@@ -1,8 +1,6 @@
 server.port=18080
-
 security.require-ssl=true
-
-# The format used for the keystore 
+# The format used for the keystore
 server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
 server.ssl.key-store=../bin/keyStore.p12
@@ -10,3 +8,4 @@ server.ssl.key-store=../bin/keyStore.p12
 server.ssl.key-store-password=changeit
 # The alias mapped to the certificate
 server.ssl.key-alias=karta
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
