--- a/sample_selenium_project/pom.xml
+++ b/sample_selenium_project/pom.xml
@@ -27,6 +27,37 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>com.googlecode.maven-download-plugin</groupId>
+                <artifactId>download-maven-plugin</artifactId>
+                <version>1.6.7</version>
+                <executions>
+                    <execution>
+                        <id>install-chromeDriverLinux</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <configuration>
+                            <url>http://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_linux64.zip</url>
+                            <unpack>true</unpack>
+                            <outputDirectory>${project.build.directory}/packages/Karta</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>install-chromeDriverWindows</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <configuration>
+                            <url>https://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_win32.zip</url>
+                            <unpack>true</unpack>
+                            <outputDirectory>${project.build.directory}/packages/Karta</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
