--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -140,6 +140,14 @@
         <!--            <version>31.0.1-jre</version>-->
         <!--        </dependency>-->
 
+        <!-- https://mvnrepository.com/artifact/org.python/jython -->
+        <dependency>
+            <groupId>org.python</groupId>
+            <artifactId>jython</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
