--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -143,8 +143,8 @@
         <!-- https://mvnrepository.com/artifact/org.python/jython -->
         <dependency>
             <groupId>org.python</groupId>
-            <artifactId>jython</artifactId>
-            <version>2.7.2</version>
+            <artifactId>jython-standalone</artifactId>
+            <version>2.7.3b1</version>
         </dependency>
 
 
