--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -8,11 +8,47 @@ name: Maven Package
 #     types: [created]
 
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
+    # Inputs the workflow accepts.
+    inputs:
+      numberOfOldVersionsToDelete:
+        # Friendly description to be shown in the UI instead of 'name'
+        description: "Number of old package versions to delete"
+        # Default value if no value is explicitly provided
+        default: "1"
+        # Input has to be provided for the workflow to run
+        required: false
 
 jobs:
+  delete:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Delete packages
+        uses: actions/delete-package-versions@v3
+        with:
+          package-name: org.mvss.karta.runtime
+          num-old-versions-to-delete: ${{ github.event.inputs.packageName }}
+      - name: Delete packages
+        uses: actions/delete-package-versions@v3
+        with:
+          package-name: org.mvss.karta.samples
+          num-old-versions-to-delete: ${{ github.event.inputs.packageName }}
+      - name: Delete packages
+        uses: actions/delete-package-versions@v3
+        with:
+          package-name: org.mvss.karta.server
+          num-old-versions-to-delete: ${{ github.event.inputs.packageName }}
+      - name: Delete packages
+        uses: actions/delete-package-versions@v3
+        with:
+          package-name: org.mvss.karta.framework
+          num-old-versions-to-delete: ${{ github.event.inputs.packageName }}
+      - name: Delete packages
+        uses: actions/delete-package-versions@v3
+        with:
+          package-name: org.mvss.karta
+          num-old-versions-to-delete: ${{ github.event.inputs.packageName }}
+
   build:
     runs-on: ubuntu-latest
 
@@ -26,7 +62,7 @@ jobs:
           settings-path: ${{ github.workspace }} # location for the settings.xml file
 
       - name: Build with Maven
-        run: mvn -B package  -T 4 --file pom.xml
+        run: mvn -B package -DskipTests -T 4 --file pom.xml
 
       - name: Publish to GitHub Packages Apache Maven
         run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
