--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,4 +33,4 @@ jobs:
       - name: Build with Maven
         run: mvn -B package -DskipTests -T 4 --file pom.xml
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ imageName }}
+        run: docker build . --file Dockerfile --tag ${{ github.event.inputs.imageName }}
