--- a/runtime/src/main/resources/bin/KartaTestCatalog.yaml
+++ b/runtime/src/main/resources/bin/KartaTestCatalog.yaml
@@ -2,9 +2,11 @@ name: "/"
 description: Test catalog root
 tags:
   - _karta_all_
-featureSourceParserPlugin: Kriya
-stepRunnerPlugin: Kriya
-testDataSourcePlugins:
+featureSourceParser: Kriya
+stepRunners:
+  - Kriya
+  - BeanShellStepRunner
+testDataSources:
   - DataFilesTestDataSource
   - ObjectGenTestDataSource
 tests: [ ]
