Move DependencyInjector as a separate module

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     </properties>
 
     <modules>
+        <module>dependencyinjection</module>
         <module>framework</module>
         <module>server</module>
         <module>samples</module>
