--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -46,6 +46,11 @@ jobs:
       - name: Delete packages
         uses: actions/delete-package-versions@v3
         with:
+          package-name: org.mvss.karta.dependencyinjection
+          num-old-versions-to-delete: ${{ github.event.inputs.packageName }}
+      - name: Delete packages
+        uses: actions/delete-package-versions@v3
+        with:
           package-name: org.mvss.karta
           num-old-versions-to-delete: ${{ github.event.inputs.packageName }}
 
