--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -15,6 +15,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.mvss.karta</groupId>
+            <artifactId>dependencyinjection</artifactId>
+            <version>0.1.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
